# ds-mlops-path

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CLAUDE.md  NOTEBOOK_PLAN.md  README.md  _quarto.yml  about.html  about.qmd  cliff.toml  index.html  index.qmd  preface.html  preface.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: check-notebooks.yml  check-qmd.yml  check_pullrequest.yaml  publish-book.yml
_freeze/tutorials/01-python-basics/01-python-core/execute-results/: html.json
_freeze/tutorials/01-python-basics/02-control-flow/execute-results/: html.json
_freeze/tutorials/01-python-basics/02-python-patterns/execute-results/: html.json
_freeze/tutorials/01-python-basics/03-numpy/execute-results/: html.json
_freeze/tutorials/01-python-basics/03-python-patterns/execute-results/: html.json
_freeze/tutorials/01-python-basics/04-numpy/execute-results/: html.json
_freeze/tutorials/01-python-basics/05-matplotlib/execute-results/: html.json
_freeze/tutorials/01-python-basics/06-lets-plot/execute-results/: html.json
_freeze/tutorials/01-python-basics/07-data-storytelling/execute-results/: html.json
_freeze/tutorials/01-python-basics/08-pandas-core/execute-results/: html.json
_freeze/tutorials/01-python-basics/09-pandas-operations/execute-results/: html.json
_freeze/tutorials/01-python-basics/10-combining-reshaping/execute-results/: html.json
_freeze/tutorials/01-python-basics/11-polars/execute-results/: html.json
_freeze/tutorials/01-python-basics/11-time-series/execute-results/: html.json
_freeze/tutorials/01-python-basics/12-great-tables/execute-results/: html.json
_freeze/tutorials/02-dev-tools/01-uv-project-setup/execute-results/: html.json
_freeze/tutorials/02-dev-tools/02-code-quality-ruff/execute-results/: html.json
_freeze/tutorials/02-dev-tools/03-type-annotations/execute-results/: html.json
_freeze/tutorials/02-dev-tools/04-git-github/execute-results/: html.json
_freeze/tutorials/02-dev-tools/05-pytest-testing/execute-results/: html.json
_freeze/tutorials/02-dev-tools/06-pre-commit-automation/execute-results/: html.json
_freeze/tutorials/02-dev-tools/07-pydantic-validation/execute-results/: html.json
_freeze/tutorials/02-dev-tools/08-pandera-schema-validation/execute-results/: html.json
ark/plot/: basic_plots.py  diagrams.py  theme.py  tokens.py
notebook/: data_exploration.ipynb
site_libs/bootstrap/: bootstrap-078b5e0919856d3ce50bd41d62ae3554.min.css  bootstrap-0e5b855e147c333b885e15208ac8da49.min.css  bootstrap-0f3842b63b3a17d781c7303dc189e804.min.css  bootstrap-212e973001e6594fb07bce043cc2f62c.min.css  bootstrap-25d02d6ee2c20d6bcb3e5ee92e71e791.min.css  bootstrap-2b523e98c720462f4961d0213bd1f36e.min.css  bootstrap-2bbe8175f3a6986c517e4bd766e779ba.min.css  bootstrap-369035fd49b832c5f4f2d78fcf1b6dcb.min.css  bootstrap-f46e73d4d679aa6dfc13fe11e60f2d53.min.css
tutorials/: 00-landscape.html  00-landscape.qmd
tutorials/01-python-basics/: 01-python-core.html  01-python-core.ipynb  02-control-flow.html  02-control-flow.ipynb  02-python-patterns.html  02-python-patterns.ipynb  03-functions.html  03-functions.ipynb  03-numpy.html  03-numpy.ipynb  03-python-patterns.html  03-python-patterns.ipynb  03a-python-patterns.html  03a-python-patterns.ipynb  03b-python-patterns.html  03b-python-patterns.ipynb  04-classes.html  04-classes.ipynb  04-matplotlib.ipynb  04-numpy.html  04-numpy.ipynb  04a-numpy.html  04a-numpy.ipynb  04b-numpy.html  04b-numpy.ipynb  05-math-statistics.html  05-math-statistics.ipynb  05-matplotlib.html  05-matplotlib.ipynb  06-lets-plot.html  06-lets-plot.ipynb  06-numpy.html  06-numpy.ipynb  07-data-storytelling.html  07-data-storytelling.ipynb  07-numpy-advanced.html  07-numpy-advanced.ipynb  08-matplotlib.html  08-matplotlib.ipynb  08-pandas-core.html  (+27 more)
tutorials/01-python-basics/data/: courses.csv  daily_attendance.csv  generate_dataset.py  university_analytics.csv
tutorials/02-dev-tools/: 00-vscode-setup.html  00-vscode-setup.qmd  01-uv-project-setup.html  01-uv-project-setup.qmd  02-code-quality-ruff.html  02-code-quality-ruff.qmd  03-type-annotations.html  03-type-annotations.ipynb  04-git-github.html  04-git-github.qmd  05-pytest-testing.html  05-pytest-testing.qmd  06-pre-commit-automation.html  06-pre-commit-automation.qmd  07-pydantic-validation.html  07-pydantic-validation.ipynb  07-pydantic-validation.qmd  08-pandera-schema-validation.html  08-pandera-schema-validation.ipynb  09-logging.html  09-logging.ipynb  dev-tools.md
tutorials/03-data-analysis/: 00-data-exploration.ipynb  01-data-analysis-1.ipynb  01-pandas-core.html  01-pandas-core.ipynb  02-data-analysis-2.ipynb  02-pandas-operations.html  02-pandas-operations.ipynb  03-combining-reshaping.html  03-combining-reshaping.ipynb  03-data-analysis-3.ipynb
tutorials/04-ml-intro/: 01-dl-pytorch.ipynb  01-ml-introduction.html  01-ml-introduction.qmd  02-ml-what-is-ml.html  02-ml-what-is-ml.qmd  02-optuna-hyperparameter.ipynb  03-ml-pipeline.ipynb  03-ml-workflow.html  03-ml-workflow.qmd  04-sklearn-core.html  04-sklearn-core.ipynb  04a-sklearn-core.html  04a-sklearn-core.ipynb  04b-sklearn-core.html  04b-sklearn-core.ipynb  05-sklearn-pipeline.html  05-sklearn-pipeline.ipynb  05a-sklearn-pipeline.html  05a-sklearn-pipeline.ipynb  05b-sklearn-pipeline.html  05b-sklearn-pipeline.ipynb  PLAN.md
tutorials/04-ml-intro/models/: pipeline_is_canceled.joblib
tutorials/_quarto/: brand.scss
(+6 files in other folders)
